--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,26 +2,21 @@ Package: prevR
 Type: Package
 Title: Functions for Estimating Prevalence
 Version: 0.1
-Date: 2015-11-17
-Authors@R: c(person("Simon", "Crouch",
-                    role="aut"),
-             person("Stephanie", "Lax",
-                    email="stephanie.lax@york.ac.uk",
-                    role=c("cre", "ctb")),
-             person("Stuart", "Lacy",
-                    role="ctb"))
+Date: 2016-05-16
+Authors: Simon Crouch <simon.crouch@york.ac.uk>,
+         Stephanie Lax <stephanie.lax@york.ac.uk>,
+         Stuart Lacy <stuart.lacy@york.ac.uk>
+Maintainer: Stuart Lacy <stuart.lacy@york.ac.uk>
 Description: This code was used to calculate the estimated portion of the 10-
     year prevalence data presented on the HMRN website: \url{https://www.hmrn.org/
     statistics/prevalence}
 License: GPL-2
+Depends:
+    survival (>= 2.37-7)
 Imports:
     abind (>= 1.4-3),
-    dplyr (>= 0.4.3),
-    rms (>= 4.4-0),
-    survival (>= 2.37-7)
+    rms (>= 4.4-0)
 RoxygenNote: 5.0.1
-Suggests: knitr,
-    rmarkdown,
-    testthat,
+Suggests: testthat,
     doParallel
 VignetteBuilder: knitr
