Updated NAMESPACE with import declarations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,3 +9,8 @@ export(prevalence_simulated)
 export(print.prevalence)
 export(summary.cincidence)
 export(summary.prevalence)
+importFrom(abind,abind)
+importFrom(survival,Surv)
+importFrom(survival,survreg.control)
+importFrom(survival,survreg.distributions)
+importFrom(survival,survreg.fit)
