Updated docs and namespaces

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,15 +5,17 @@ export(incidence)
 export(incidence_age_distribution)
 export(mean_incidence_rate)
 export(population_survival_rate)
-export(prev_chisq)
 export(prevalence)
 export(prevalence_counted)
 export(prevalence_simulated)
 export(print.prevalence)
-export(sim_check)
 export(summary.cincidence)
 export(summary.prevalence)
+export(survfit.prevalence)
+export(test_poisson_fit)
+export(test_prevalence_fit)
 importFrom(abind,abind)
+importFrom(rms,Predict)
 importFrom(rms,cph)
 importFrom(rms,datadist)
 importFrom(rms,rcs)
