--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(functional_form_age)
 export(incidence)
 export(incidence_age_distribution)
 export(mean_incidence_rate)
+export(plot.survfit.prev)
 export(population_survival_rate)
 export(prevalence)
 export(prevalence_counted)
@@ -14,6 +15,8 @@ export(summary.prevalence)
 export(survfit.prevalence)
 export(test_poisson_fit)
 export(test_prevalence_fit)
+import(dplyr)
+import(ggplot2)
 importFrom(abind,abind)
 importFrom(rms,Predict)
 importFrom(rms,cph)
@@ -24,3 +27,4 @@ importFrom(survival,coxph)
 importFrom(survival,survreg.control)
 importFrom(survival,survreg.distributions)
 importFrom(survival,survreg.fit)
+importFrom(tidyr,gather)
