--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,13 +17,13 @@ export(test_poisson_fit)
 export(test_prevalence_fit)
 import(dplyr)
 import(ggplot2)
+import(rms)
 importFrom(abind,abind)
-importFrom(rms,Predict)
-importFrom(rms,cph)
-importFrom(rms,datadist)
-importFrom(rms,rcs)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_ribbon)
+importFrom(ggplot2,ggplot)
 importFrom(survival,Surv)
-importFrom(survival,coxph)
 importFrom(survival,survreg.control)
 importFrom(survival,survreg.distributions)
 importFrom(survival,survreg.fit)
