Added print and summary methods for survfit.prev

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,7 @@ export(population_survival_rate)
 export(prevalence)
 export(prevalence_counted)
 export(prevalence_simulated)
-export(print.prevalence)
-export(summary.cincidence)
-export(summary.prevalence)
+export(summary.survfit.prev)
 export(survfit.prevalence)
 export(test_poisson_fit)
 export(test_prevalence_fit)
