--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(functional_form_age)
 export(incidence)
 export(incidence_age_distribution)
+export(inspect_incidence)
 export(mean_incidence_rate)
 export(plot.survfit.prev)
 export(population_survival_rate)
@@ -18,9 +19,15 @@ import(ggplot2)
 import(rms)
 importFrom(abind,abind)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_colour_manual)
+importFrom(ggplot2,theme_bw)
+importFrom(ggplot2,ylim)
 importFrom(survival,Surv)
 importFrom(survival,survreg.control)
 importFrom(survival,survreg.distributions)
