--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,10 @@
 export(functional_form_age)
 export(incidence)
 export(incidence_age_distribution)
-export(inspect_incidence)
 export(mean_incidence_rate)
+export(plot.incidence)
 export(plot.survfit.prev)
+export(plot_incidence_fit)
 export(population_survival_rate)
 export(prevalence)
 export(prevalence_counted)
@@ -13,7 +14,7 @@ export(prevalence_simulated)
 export(raw_incidence)
 export(summary.survfit.prev)
 export(survfit.prevalence)
-export(test_poisson_fit)
+export(test_incidence_fit)
 export(test_prevalence_fit)
 import(dplyr)
 import(ggplot2)
@@ -24,6 +25,7 @@ importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_ribbon)
+importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_colour_manual)
