--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,9 @@ import(dplyr)
 import(ggplot2)
 import(rms)
 importFrom(abind,abind)
+importFrom(doParallel,registerDoParallel)
+importFrom(foreach,"%dopar%")
+importFrom(foreach,foreach)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
