Changes to meet R CMD CHECK, mainly namespace

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,8 @@ Imports:
     dplyr (>= 0.4.0),
     foreach (>= 1.4.0),
     ggplot2 (>= 2.0.0),
+    lazyeval,
+    magrittr (>= 1.5),
     rms (>= 4.4-0),
     tidyr (>= 0.4.0)
 RoxygenNote: 5.0.1
