--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(summary,incidence)
 S3method(summary,prevalence)
 S3method(summary,survfit.prev)
 S3method(survfit,prevalence)
+export(determine_registry_years)
 export(functional_form_age)
 export(incidence)
 export(incidence_age_distribution)
@@ -21,14 +22,18 @@ export(prevalence_simulated)
 export(raw_incidence)
 export(test_incidence_fit)
 export(test_prevalence_fit)
-import(dplyr)
-import(ggplot2)
 import(rms)
+import(stats)
 importFrom(abind,abind)
 importFrom(doParallel,registerDoParallel)
+importFrom(dplyr,arrange)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select_vars)
+importFrom(dplyr,summarise)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
-importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_string)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
@@ -39,8 +44,11 @@ importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_colour_manual)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,ylim)
+importFrom(magrittr,"%>%")
 importFrom(survival,Surv)
+importFrom(survival,survfit)
 importFrom(survival,survreg.control)
 importFrom(survival,survreg.distributions)
 importFrom(survival,survreg.fit)
-importFrom(tidyr,gather)
+importFrom(tidyr,gather_)
+importFrom(utils,data)
