PACKAGE PASSING CMD CHECK!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,6 @@ export(prevalence_simulated)
 export(raw_incidence)
 export(test_incidence_fit)
 export(test_prevalence_fit)
-import(rms)
 import(stats)
 importFrom(abind,abind)
 importFrom(doParallel,registerDoParallel)
@@ -45,6 +44,8 @@ importFrom(ggplot2,scale_colour_manual)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,ylim)
 importFrom(magrittr,"%>%")
+importFrom(rms,cph)
+importFrom(rms,rcs)
 importFrom(survival,Surv)
 importFrom(survival,survfit)
 importFrom(survival,survreg.control)
