--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,8 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
-R/old_diagnostics.R
+^cran-comments\.md$
+^README-.*\.png$
+^NEWS\.md$
+^TODO$
+vignettes/diagram.pdf
+R/old_diagnostics.R$
