--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,18 +12,20 @@ Description: Estimates disease prevalence for a given index date, using existing
     registry data extended with Monte Carlo simulations.
 License: GPL-2
 Depends:
-    survival (>= 2.37-7)
+    survival
 Imports:
-    abind (>= 1.4-3),
-    doParallel (>= 1.0.0),
-    dplyr (>= 0.4.0),
-    foreach (>= 1.4.0),
-    ggplot2 (>= 2.0.0),
+    abind ,
+    doParallel ,
+    dplyr ,
+    foreach ,
+    ggplot2 ,
     lazyeval,
-    magrittr (>= 1.5),
-    rms (>= 4.4-0),
-    tidyr (>= 0.4.0)
+    magrittr ,
+    rms ,
+    tidyr
 RoxygenNote: 5.0.1
 Suggests: testthat,
     knitr
+URL: https://cran.rstudio.com/web/packages/rprev/
 VignetteBuilder: knitr
+
