--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,12 +9,15 @@ S3method(summary,incidence)
 S3method(summary,prevalence)
 S3method(summary,survfit.prev)
 S3method(survfit,prevalence)
+export(cure_model_wrapper)
 export(determine_registry_years)
 export(determine_yearly_endpoints)
 export(functional_form_age)
 export(incidence)
 export(incidence_age_distribution)
 export(mean_incidence_rate)
+export(new_prevalence)
+export(new_test_prevalence_fit)
 export(population_survival_rate)
 export(prevalence)
 export(prevalence_counted)
@@ -23,6 +26,7 @@ export(raw_incidence)
 export(test_incidence_fit)
 export(test_prevalence_fit)
 export(yearly_incidence)
+import(data.table)
 import(stats)
 importFrom(doParallel,registerDoParallel)
 importFrom(dplyr,arrange)
