Renamed old functions to *_legacy and added docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(summary,incidence)
 S3method(summary,prevalence)
 S3method(summary,survfit.prev)
 S3method(survfit,prevalence)
+export(counted_prevalence)
 export(cure_model_wrapper)
 export(determine_registry_years)
 export(determine_yearly_endpoints)
@@ -16,15 +17,16 @@ export(functional_form_age)
 export(incidence)
 export(incidence_age_distribution)
 export(mean_incidence_rate)
-export(new_prevalence)
-export(new_test_prevalence_fit)
 export(population_survival_rate)
 export(prevalence)
-export(prevalence_counted)
-export(prevalence_simulated)
+export(prevalence_counted_legacy)
+export(prevalence_legacy)
+export(prevalence_simulated_legacy)
 export(raw_incidence)
+export(sim_prevalence)
 export(test_incidence_fit)
 export(test_prevalence_fit)
+export(test_prevalence_fit_legacy)
 export(yearly_incidence)
 import(data.table)
 import(stats)
