--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ S3method(summary,survfit.prev)
 S3method(survfit,prevalence)
 export(cure_model_wrapper)
 export(determine_yearly_endpoints)
+export(flexsurvcure_population)
 export(functional_form_age)
 export(incidence)
 export(incidence_age_distribution)
