Added version requirement for tidyselect
tidyselect is used in the new standard evaluation version of tidyr::gather. However, version 0.2.0 is required for this functionality

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,8 @@ Imports:
     lazyeval,
     magrittr,
     rms,
-    tidyr
+    tidyr,
+    tidyselect (>= 0.2.0)
 RoxygenNote: 6.0.1
 Suggests: testthat,
     knitr
