Updated functions to test custom models

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(mean_incidence_rate)
 export(prevalence)
 export(test_incidence_fit)
 export(test_prevalence_fit)
+export(test_survival_model)
 export(yearly_incidence)
 import(data.table)
 import(stats)
