Exported generic methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,13 +15,17 @@ S3method(summary,prevalence)
 S3method(summary,survfit.prev)
 S3method(survfit,prevalence)
 export(determine_yearly_endpoints)
+export(draw_incident_population)
+export(extract_covars)
 export(flexsurvcure_population)
 export(functional_form_age)
 export(incidence)
 export(incidence_age_distribution)
 export(mean_incidence_rate)
+export(predict_survival_probability)
 export(prevalence)
 export(test_incidence_fit)
+export(test_incidence_model)
 export(test_prevalence_fit)
 export(test_survival_model)
 export(yearly_incidence)
