--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,5 +30,5 @@ Imports:
 RoxygenNote: 6.0.1
 Suggests: testthat,
     knitr
-URL: https://cran.r-project.org/package=rprev
+URL: https://github.com/stulacy/rprev-dev
 VignetteBuilder: knitr
