Refactored cure models to share code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ S3method(survfit,prevalence)
 export(determine_yearly_endpoints)
 export(draw_incident_population)
 export(extract_covars)
+export(fixed_cure)
 export(flexsurvcure_population)
 export(functional_form_age)
 export(incidence)
