--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,21 +16,16 @@ S3method(summary,incidence)
 S3method(summary,prevalence)
 S3method(summary,survfit.prev)
 S3method(survfit,prevalence)
-export(determine_yearly_endpoints)
 export(draw_incident_population)
 export(extract_covars)
 export(fixed_cure)
-export(functional_form_age)
 export(incidence)
-export(incidence_age_distribution)
-export(mean_incidence_rate)
 export(predict_survival_probability)
 export(prevalence)
-export(test_incidence_fit)
-export(test_incidence_model)
+export(test_homogeneity)
 export(test_prevalence_fit)
-export(test_survival_model)
-export(yearly_incidence)
+export(validate_incidence_model)
+export(validate_survival_model)
 import(data.table)
 import(stats)
 importFrom(doParallel,registerDoParallel)
@@ -51,8 +46,6 @@ importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_colour_manual)
 importFrom(ggplot2,theme_bw)
 importFrom(magrittr,"%>%")
-importFrom(rms,cph)
-importFrom(rms,rcs)
 importFrom(survival,survfit)
 importFrom(tidyr,gather_)
 importFrom(utils,data)
