--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,22 +4,21 @@ S3method(draw_incident_population,expinc)
 S3method(extract_covars,fixedcure)
 S3method(extract_covars,flexsurvreg)
 S3method(extract_covars,survregmin)
-S3method(plot,incidence)
+S3method(plot,incdiag)
 S3method(plot,survfit.prev)
 S3method(predict_survival_probability,fixedcure)
 S3method(predict_survival_probability,flexsurvreg)
 S3method(predict_survival_probability,survregmin)
-S3method(print,incidence)
+S3method(print,incdiag)
 S3method(print,prevalence)
 S3method(print,survfit.prev)
-S3method(summary,incidence)
+S3method(summary,incdiag)
 S3method(summary,prevalence)
 S3method(summary,survfit.prev)
 S3method(survfit,prevalence)
 export(draw_incident_population)
 export(extract_covars)
 export(fixed_cure)
-export(incidence)
 export(predict_survival_probability)
 export(prevalence)
 export(test_homogeneity)
