--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ Authors@R: c(
         )
 Description: Estimates disease prevalence for a given index date, using existing
     registry data extended with Monte Carlo simulations.
+LazyData: true
 License: GPL-2
 Depends:
     R (>= 2.10),
