survregmin version working independently

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ S3method(survfit,prevalence)
 export(draw_incident_population)
 export(extract_covars)
 export(fixed_cure)
+export(predict_event_time)
 export(predict_survival_probability)
 export(prevalence)
 export(test_homogeneity)
