--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ S3method(extract_covars,flexsurvreg)
 S3method(extract_covars,survregmin)
 S3method(plot,incdiag)
 S3method(plot,survfit.prev)
+S3method(predict_event_time,flexsurvreg)
+S3method(predict_event_time,survregmin)
 S3method(predict_survival_probability,fixedcure)
 S3method(predict_survival_probability,flexsurvreg)
 S3method(predict_survival_probability,survregmin)
