Changing method of subtracting dates to handle Feb 29th leap years

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,5 +30,6 @@ export(validate_incidence_model)
 export(validate_survival_model)
 import(data.table)
 import(stats)
+importFrom(lubridate,"%m-%")
 importFrom(magrittr,"%>%")
 importFrom(survival,survfit)
