Fixes to CRAN suggestions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,8 @@ Authors@R: c(
         person("Simon", "Crouch", email="simon.crouch@york.ac.uk", role='aut'),
         person("Stephanie", "Lax", email="stephanie.lax@york.ac.uk", role='aut')
         )
-Description: Estimates disease prevalence for a given index date, using existing
-    registry data extended with Monte Carlo simulations.
+Description: Estimates disease prevalence for a given index date using existing
+    registry data extended with Monte Carlo simulations following the method of Crouch et al (2014) <doi: 10.1016/j.canep.2014.02.005>.
 LazyData: true
 License: GPL-2
 Depends:
@@ -23,7 +23,7 @@ Imports:
     lubridate,
     magrittr,
     tidyr
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 Suggests:
     flexsurv,
     flexsurvcure,
